Rename the map from monitoring to exporters

--- a/prometheus-exporters-formula/prometheus-exporters/map.jinja
+++ b/prometheus-exporters-formula/prometheus-exporters/map.jinja
@@ -1,4 +1,4 @@
-{% set monitoring = salt['grains.filter_by']({
+{% set exporters = salt['grains.filter_by']({
     'RedHat': {
         'node_exporter_package': 'golang-github-prometheus-node_exporter',
         'node_exporter_service': 'prometheus-node_exporter',
@@ -7,5 +7,5 @@
         'node_exporter_package': 'golang-github-prometheus-node_exporter',
         'node_exporter_service': 'prometheus-node_exporter',
     },
-}, merge=salt['pillar.get']('monitoring:lookup')) %}
+}, merge=salt['pillar.get']('exporters:lookup')) %}
 
