Allow to configure listen port for node exporter

--- a/prometheus-exporters-formula/prometheus-exporters/map.jinja
+++ b/prometheus-exporters-formula/prometheus-exporters/map.jinja
@@ -2,6 +2,7 @@
     'Suse': {
         'node_exporter_package': 'golang-github-prometheus-node_exporter',
         'node_exporter_service': 'prometheus-node_exporter',
+        'node_exporter_service_config': '/etc/sysconfig/prometheus-node_exporter',
         'postgres_exporter_package': 'golang-github-wrouesnel-postgres_exporter',
         'postgres_exporter_service': 'prometheus-postgres_exporter',
         'postgres_exporter_service_config': '/etc/sysconfig/prometheus-postgres_exporter',
@@ -9,6 +10,7 @@
     'Ubuntu': {
         'node_exporter_package': 'prometheus-node-exporter',
         'node_exporter_service': 'prometheus-node-exporter',
+        'node_exporter_service_config': '/etc/default/prometheus-node-exporter',
         'postgres_exporter_package': 'prometheus-postgres-exporter',
         'postgres_exporter_service': 'prometheus-postgres-exporter',
         'postgres_exporter_service_config': '/etc/default/prometheus-postgres-exporter',
