Fix map.jinja for Ubuntu (os_family is "Debian")

--- a/prometheus-exporters-formula/prometheus-exporters/map.jinja
+++ b/prometheus-exporters-formula/prometheus-exporters/map.jinja
@@ -7,7 +7,7 @@
         'postgres_exporter_service': 'prometheus-postgres_exporter',
         'postgres_exporter_service_config': '/etc/sysconfig/prometheus-postgres_exporter',
     },
-    'Ubuntu': {
+    'Debian': {
         'node_exporter_package': 'prometheus-node-exporter',
         'node_exporter_service': 'prometheus-node-exporter',
         'node_exporter_service_config': '/etc/default/prometheus-node-exporter',
