fix restart of service which is started via socket
When a service is started via socket, you cannot restart the socket
when the service was already started. So we turn the service down
and define socket running.

--- a/tftpd-formula/tftpd/map.jinja
+++ b/tftpd-formula/tftpd/map.jinja
@@ -21,6 +21,7 @@
       'package':      'tftp',
       'conflicting_package':      'atftp',
       'servicename':  'tftp.socket',
+      'deadservice':  'tftp.service',
       'pathname_cfg': '/etc/sysconfig/tftp'
     }
   })
