Add support for provisioning the apache exporter

--- a/prometheus-exporters-formula/prometheus-exporters/map.jinja
+++ b/prometheus-exporters-formula/prometheus-exporters/map.jinja
@@ -3,6 +3,9 @@
         'node_exporter_package': 'golang-github-prometheus-node_exporter',
         'node_exporter_service': 'prometheus-node_exporter',
         'node_exporter_service_config': '/etc/sysconfig/prometheus-node_exporter',
+        'apache_exporter_package': 'golang-github-lusitaniae-apache_exporter',
+        'apache_exporter_service': 'prometheus-apache_exporter',
+        'apache_exporter_service_config': '/etc/sysconfig/prometheus-apache_exporter',
         'postgres_exporter_package': 'golang-github-wrouesnel-postgres_exporter',
         'postgres_exporter_service': 'prometheus-postgres_exporter',
         'postgres_exporter_service_config': '/etc/sysconfig/prometheus-postgres_exporter',
@@ -11,6 +14,9 @@
         'node_exporter_package': 'prometheus-node-exporter',
         'node_exporter_service': 'prometheus-node-exporter',
         'node_exporter_service_config': '/etc/default/prometheus-node-exporter',
+        'apache_exporter_package': 'prometheus-apache-exporter',
+        'apache_exporter_service': 'prometheus-apache-exporter',
+        'apache_exporter_service_config': '/etc/default/prometheus-apache-exporter',
         'postgres_exporter_package': 'prometheus-postgres-exporter',
         'postgres_exporter_service': 'prometheus-postgres-exporter',
         'postgres_exporter_service_config': '/etc/default/prometheus-postgres-exporter',
@@ -19,6 +25,9 @@
         'node_exporter_package': 'golang-github-prometheus-node_exporter',
         'node_exporter_service': 'prometheus-node_exporter',
         'node_exporter_service_config': '/etc/sysconfig/prometheus-node_exporter',
+        'apache_exporter_package': 'golang-github-lusitaniae-apache_exporter',
+        'apache_exporter_service': 'prometheus-apache_exporter',
+        'apache_exporter_service_config': '/etc/sysconfig/prometheus-apache_exporter',
         'postgres_exporter_package': 'golang-github-wrouesnel-postgres_exporter',
         'postgres_exporter_service': 'prometheus-postgres_exporter',
         'postgres_exporter_service_config': '/etc/sysconfig/prometheus-postgres_exporter',
