--- a/pxe-formula/pxe/map.jinja
+++ b/pxe-formula/pxe/map.jinja
@@ -16,23 +16,26 @@
 
 {% set cfgmap = salt['grains.filter_by']({
     'Suse': {
-      'package':            'syslinux',
-      'package_efi':        'grub2-x86_64-efi',
+      'packages':           ['syslinux'],
+      'packages_efi':       ['shim', 'grub2-x86_64-efi'],
       'path_base':          pxeroot + '/boot',
       'path_cfg':           pxeroot + '/boot/pxelinux.cfg',
       'pathname_defcfg':    pxeroot + '/boot/pxelinux.cfg/default',
       'boot_pxelinux':      pxeroot + '/boot/pxelinux.0',
       'path_pxelinux':      '/usr/share/syslinux/pxelinux.0',
       'pathname_defcfg_efi': pxeroot + '/boot/pxelinux.cfg/default.grub2.cfg',
-      'boot_efi':           pxeroot + '/boot/grub.efi',
-      'path_efi':           '/usr/share/grub2/x86_64-efi/grub.efi',
+      'boot_grub_efi':      pxeroot + '/boot/grub.efi',
+      'path_grub_efi':      '/usr/share/grub2/x86_64-efi/grub.efi',
+      'boot_shim_efi':      pxeroot + '/boot/shim.efi',
+      'path_shim_efi':      '/usr/share/efi/x86_64/shim.efi',
       'pathname_basecfg_efi': pxeroot + '/boot/grub.cfg',
       'boot_efi_dir':       pxeroot + '/boot/x86_64-efi',
       'path_efi_dir':       '/usr/share/grub2/x86_64-efi'
     }
   }, merge=salt['grains.filter_by']({
     'SLES-12': {
-      'path_efi':           '/usr/lib/grub2/x86_64-efi/grub.efi',
+      'path_grub_efi':      '/usr/lib/grub2/x86_64-efi/grub.efi',
+      'path_shim_efi':      '/usr/lib64/efi/shim.efi',
       'path_efi_dir':       '/usr/lib/grub2/x86_64-efi'
     }
   }, grain='osfinger'))
