UEFI HTTPBoot support in dhcpd formula

--- a/dhcpd-formula/dhcpd/files/host.jinja
+++ b/dhcpd-formula/dhcpd/files/host.jinja
@@ -28,19 +28,29 @@ host {{ host }} {
   {%- if 'fixed_address' in config %}
   fixed-address {{ config.fixed_address }};
   {%- endif %}
-  {%- if 'filename_efi' in config %}
-  if option arch = 00:07 {
-    filename "{{ config.filename_efi }}";
-    {%- if 'filename' in config %}
-  } else {
-    filename "{{ config.filename }}";
-    {%- endif %}
+  {%- if 'filename_http' in config %}
+  if substring (option vendor-class-identifier, 0, 10) = "HTTPClient" {
+    option vendor-class-identifier "HTTPClient";
+    filename "{{ config.filename_http }}";
   }
+  else {
+  {%- endif %}
+  {%- if 'filename_efi' in config %}
+   if option arch = 00:07 {
+     filename "{{ config.filename_efi }}";
+     {%- if 'filename' in config %}
+   } else {
+     filename "{{ config.filename }}";
+     {%- endif %}
+   }
   {%- elif 'filename' in config %}
-  filename "{{ config.filename }}";
+   filename "{{ config.filename }}";
   {%- endif %}
   {%- if 'next_server' in config %}
-  next-server {{ config.next_server }};
+   next-server {{ config.next_server }};
+  {%- endif %}
+  {%- if 'filename_http' in config %}
+  }
   {%- endif %}
   {%- if 'server_name' in config %}
   server-name "{{ config.server_name }}";
