--- a/dhcpd-formula/dhcpd/files/subnet.jinja
+++ b/dhcpd-formula/dhcpd/files/subnet.jinja
@@ -44,19 +44,29 @@ subnet {{ subnet }} netmask {{ config.netmask }} {
 {%- if 'domain_search' in config %}
   option domain-search "{{ config['domain_search']|join('","') }}";
 {%- endif %}
-{%- if 'filename_efi' in config %}
-  if option arch = 00:07 {
-    filename "{{ config.filename_efi }}";
-  {%- if 'filename' in config %}
-  } else {
-    filename "{{ config.filename }}";
-  {%- endif %}
+{%- if 'filename_http' in config %}
+  if substring (option vendor-class-identifier, 0, 10) = "HTTPClient" {
+    option vendor-class-identifier "HTTPClient";
+    filename "{{ config.filename_http }}";
   }
+  else {
+{%- endif %}
+{%- if 'filename_efi' in config %}
+   if option arch = 00:07 {
+     filename "{{ config.filename_efi }}";
+  {%- if 'filename' in config %}
+   } else {
+     filename "{{ config.filename }}";
+  {%- endif %}
+   }
 {%- elif 'filename' in config %}
-  filename "{{ config.filename }}";
+   filename "{{ config.filename }}";
 {%- endif %}
 {%- if 'next_server' in config %}
-  next-server {{ config['next_server'] }};
+   next-server {{ config['next_server'] }};
+{%- endif %}
+{%- if 'filename_http' in config %}
+  }
 {%- endif %}
 {%- if 'default_lease_time' in config %}
   default-lease-time {{ config['default_lease_time'] }};
