virthost: install kernel-default
The SLES JeOS images are shipping kernel-default-base that is smaller
but doesn't ship the KVM and Xen modules. Ensure we have the
kernel-default kernel to get them... yet another case where we need a
reboot.

--- a/virtualization-host-formula/virtualization-host/map.jinja
+++ b/virtualization-host-formula/virtualization-host/map.jinja
@@ -22,6 +22,7 @@
       'guestfs-tools',
       'libvirt-client',
       'python3-libvirt-python',
+      'kernel-default',
     ]
   %}
 {% endif %}
