Add ha-cluster exporter and refactor salt

--- a/prometheus-exporters-formula/prometheus-exporters/map.jinja
+++ b/prometheus-exporters-formula/prometheus-exporters/map.jinja
@@ -12,6 +12,9 @@
         'exporter_exporter_package': 'golang-github-QubitProducts-exporter_exporter',
         'exporter_exporter_service': 'prometheus-exporter_exporter',
         'exporter_exporter_service_config': '/etc/sysconfig/prometheus-exporter_exporter',
+	'ha_cluster_exporter_package": 'prometheus-ha_cluster_exporter',
+	'ha_cluster_exporter_service": 'prometheus-ha_cluster_exporter',
+
     },
     'Debian': {
         'node_exporter_package': 'prometheus-node-exporter',
