--- a/prometheus-exporters-formula/prometheus-exporters/map.jinja
+++ b/prometheus-exporters-formula/prometheus-exporters/map.jinja
@@ -12,8 +12,8 @@
         'exporter_exporter_package': 'golang-github-QubitProducts-exporter_exporter',
         'exporter_exporter_service': 'prometheus-exporter_exporter',
         'exporter_exporter_service_config': '/etc/sysconfig/prometheus-exporter_exporter',
-	'ha_cluster_exporter_package": 'prometheus-ha_cluster_exporter',
-	'ha_cluster_exporter_service": 'prometheus-ha_cluster_exporter',
+	    'ha_cluster_exporter_package': 'prometheus-ha_cluster_exporter',
+	    'ha_cluster_exporter_service': 'prometheus-ha_cluster_exporter',
 
     },
     'Debian': {
