Add mitigations for Xen hypervisor.
Even if the nosmt flag doesn't need to be passed to the kernel on a
Dom0, it doesn't hurt and it makes the code simpler this way.

--- a/cpu-mitigations-formula/states/map.jinja
+++ b/cpu-mitigations-formula/states/map.jinja
@@ -1,9 +1,26 @@
 {% set map = {
     'cpu_opt': {
-    'Auto'           : 'mitigations=auto',
-    'Auto + No SMT'  : 'mitigations=auto,nosmt',
-    'Off'            : 'mitigations=off',
-    'Manual'         : '',
+        'Auto'           : {
+            'kernel': ' mitigations=auto',
+            'xen': {
+            },
+        },
+        'Auto + No SMT'  : {
+            'kernel': ' mitigations=auto,nosmt',
+            'xen': {
+                'smt': False
+            },
+        },
+        'Off'            : {
+            'kernel': ' mitigations=off',
+            'xen': {
+                'spec-ctrl': False,
+            },
+        },
+        'Manual'         : {
+            'kernel': '',
+            'xen': '',
+        },
     },
   }
 %}
