Update bind formula to newest upstream
- fixes apparmor profile conflict on Debian systems
- add Gentoo support

--- a/bind-formula/bind/map.jinja
+++ b/bind-formula/bind/map.jinja
@@ -15,7 +15,7 @@
         'named_directory': '/var/cache/bind',
         'zones_directory': '/var/cache/bind/zones',
         'chroot_dir': '',
-        'log_dir': '/var/log/bind9',
+        'log_dir': '/var/log/named',
         'log_mode': '644',
         'user': 'bind',
         'group': 'bind',
@@ -91,6 +91,26 @@
         'group': 'bind',
         'mode': '640',
         'key_directory': '/usr/local/etc/namedb/keys',
+        'key_algorithm': 'RSASHA256',
+        'key_algorithm_field': '008',
+        'key_size': '4096',
+    },
+    'Gentoo': {
+        'pkgs': ['net-dns/bind', 'net-dns/bind-tools', 'net-dns/dnssec-tools'],
+        'service': 'named',
+        'config_source_dir': 'bind/files/gentoo',
+        'zones_source_dir': 'zones',
+        'config': '/etc/bind/named.conf',
+        'local_config': '/etc/bind/named.conf.local',
+        'named_directory': '/var/bind',
+        'zones_directory': '/var/bind/pri',
+        'chroot_dir': '',
+        'log_dir': '/var/log/named',
+        'log_mode': '660',
+        'user': 'root',
+        'group': 'named',
+        'mode': '640',
+        'key_directory': '/var/bind/dyn',
         'key_algorithm': 'RSASHA256',
         'key_algorithm_field': '008',
         'key_size': '4096',
