--- a/bind-formula/bind/files/named.conf.logging.jinja
+++ b/bind-formula/bind/files/named.conf.logging.jinja
@@ -3,9 +3,12 @@
 logging {
 
 {% for channel in salt['pillar.get']('bind:config:use_extensive_logging:channel') %}
-        channel {{channel}} {
+        channel {{ channel }} {
 {%- if salt['pillar.get']('bind:config:use_extensive_logging:channel:'+channel+':file', False) %}
-                file "{{ map.log_dir }}/{{salt['pillar.get']('bind:config:use_extensive_logging:channel:'+channel+':file')}}" versions {{salt['pillar.get']('bind:config:use_extensive_logging:channel:'+channel+':versions', '3')}} size {{salt['pillar.get']('bind:config:use_extensive_logging:channel:'+channel+':size', '20m')}}; 
+{%-   set channel_file = salt['pillar.get']('bind:config:use_extensive_logging:channel:'+channel+':file') %}
+{%-   set channel_versions = salt['pillar.get']('bind:config:use_extensive_logging:channel:'+channel+':versions', '3') %}
+{%-   set channel_size = salt['pillar.get']('bind:config:use_extensive_logging:channel:'+channel+':size', '20m') %}
+                file "{{ map.log_dir }}/{{ channel_file }}" versions {{ channel_versions }} size {{ channel_size }};
 {%- endif %}
 {%- if salt['pillar.get']('bind:config:use_extensive_logging:channel:'+channel+':print-time') %}
                 print-time yes;
@@ -17,16 +20,16 @@ logging {
                 print-severity yes;
 {%- endif %}
 {%- if salt['pillar.get']('bind:config:use_extensive_logging:channel:'+channel+':severity') %}
-                severity {{salt['pillar.get']('bind:config:use_extensive_logging:channel:'+channel+':severity')}};
+                severity {{ salt['pillar.get']('bind:config:use_extensive_logging:channel:'+channel+':severity') }};
 {%- endif %}
 {%- if salt['pillar.get']('bind:config:use_extensive_logging:channel:'+channel+':syslog') %}
-                syslog {{salt['pillar.get']('bind:config:use_extensive_logging:channel:'+channel+':syslog')}};
+                syslog {{ salt['pillar.get']('bind:config:use_extensive_logging:channel:'+channel+':syslog') }};
 {%- endif %}
         };
 {% endfor %}
 
 {%- for category in salt['pillar.get']('bind:config:use_extensive_logging:category') %}
-        category {{category}} { {{ salt['pillar.get']('bind:config:use_extensive_logging:category:'+category, []) | join('; ') }}; };
+        category {{ category }} { {{ salt['pillar.get']('bind:config:use_extensive_logging:category:'+category, []) | join('; ') }}; };
 
 {%- endfor %}
 
