Update defaults based on SLE15SP4 package
  - remove chroot default usage as it was replaced by systemd
    protections

--- a/bind-formula/bind/map.jinja
+++ b/bind-formula/bind/map.jinja
@@ -124,7 +124,7 @@
         'local_config': '/etc/named.d/named.conf.local',
         'default_config': '/etc/sysconfig/named',
         'named_directory': '/var/lib/named',
-        'chroot_dir': '/var/lib/named',
+        'chroot_dir': '',
         'log_dir': '/var/log',
         'log_mode': '660',
         'user': 'root',
