--- a/bind-formula/bind/map.jinja
+++ b/bind-formula/bind/map.jinja
@@ -125,7 +125,7 @@
         'default_config': '/etc/sysconfig/named',
         'named_directory': '/var/lib/named',
         'chroot_dir': '',
-        'log_dir': '/var/log',
+        'log_dir': '/var/lib/named/log',
         'log_mode': '660',
         'user': 'root',
         'group': 'named',
