Allow prometheus-formula only for SUSE systems
Prometheus formula is currently supported only for SUSE systems.
The change hardens the formula to allow its application only to
supported systems. Additionally, the variables map can be extended by
the customer by setting the values in `prometheus:lookup` pillar.

--- a/prometheus-formula/prometheus/map.jinja
+++ b/prometheus-formula/prometheus/map.jinja
@@ -10,4 +10,4 @@
         'prometheus_config': 'salt://prometheus/files/prometheus.yml',
         'prometheus_config_old': 'salt://prometheus/files/prometheus_old.yml'
     },
-}, default='Suse') %}
+}, merge=salt['pillar.get']('prometheus:lookup')) %}
