Remove .map.gz from kb_map dictionary
keyboard.set_sys uses localectl by default, which does not expect
filenames with .map.gz extensions. In the formula, the Jinja/Python
dictionary "kb_map" maps human friendly names to strings with the format
"kb_id".map.gz. The .map.gz extension does not show up in `localectl
list-keymaps`.

Fixes bsc#1203406

--- a/locale-formula/states/map.jinja
+++ b/locale-formula/states/map.jinja
@@ -93,56 +93,56 @@
 				'Zulu': 'zu_ZA.UTF-8'
     },
     'kb_map': {
-        'Arabic': 'arabic.map.gz',
-        'Belgian': 'be.map.gz',
-        'Canadian (Multilingual)': 'ca-multix.map.gz',
-        'Croatian': 'hr.map.gz',
-        'Czech': 'cz.map.gz',
-        'Czech (qwerty)': 'cz-qwerty.map.gz',
-        'Danish': 'dk.map.gz',
-        'Dutch': 'nl.map.gz',
-        'Dvorak': 'us-dvorak.map.gz',
-        'English (UK)': 'gb.map.gz',
-        'English (US)': 'us.map.gz',
-        'Estonian': 'ee.map.gz',
-        'Finnish': 'fi-kotoistus.map.gz',
-        'French': 'fr.map.gz',
-        'French (Canada)': 'ca.map.gz',
-        'French (Switzerland)': 'ch-fr.map.gz',
-        'German': 'de-nodeadkeys.map.gz',
-        'German (Switzerland)': 'ch-de_nodeadkeys.map.gz',
-        'German (with deadkeys)': 'de.map.gz',
-        'Greek': 'gr.map.gz',
-        'Hungarian': 'hu.map.gz',
-        'Icelandic': 'is.map.gz',
-        'Italian': 'it.map.gz',
-        'Japanese': 'jp.map.gz',
-        'Khmer': 'khmer.map.gz',
-        'Korean': 'kr.map.gz',
-        'Lithuanian': 'lt.map.gz',
-        'Norwegian': 'no.map.gz',
-        'Polish': 'pl.map.gz',
-        'Portuguese': 'pt.map.gz',
-        'Portuguese (Brazil)': 'br.map.gz',
-        'Portuguese (Brazil  US accents)': 'us-intl.map.gz',
-        'Romanian': 'ro.map.gz',
-        'Russian': 'ruwin_alt-UTF-8.map.gz',
-        'Serbian': 'sr-cy.map.gz',
-        'Simplified Chinese': 'us.map.gz',
-        'Slovak': 'sk.map.gz',
-        'Slovak (qwerty)': 'sk-qwerty.map.gz',
-        'Slovene': 'si.map.gz',
-        'Spanish': 'es.map.gz',
-        'Spanish (Asturian variant)': 'es-ast.map.gz',
-        'Spanish (CP 850)': 'es.map.gz',
-        'Spanish (Latin America)': 'latam.map.gz',
-        'Swedish': 'se.map.gz',
-        'Tajik': 'tj_alt-UTF8.map.gz',
-        'Traditional Chinese': 'us.map.gz',
-        'Turkish': 'tr.map.gz',
-        'Ukrainian': 'ua-utf.map.gz',
-        'US International': 'us-intl.map.gz'         
-    } 
+        'Arabic': 'arabic',
+        'Belgian': 'be',
+        'Canadian (Multilingual)': 'ca-multix',
+        'Croatian': 'hr',
+        'Czech': 'cz',
+        'Czech (qwerty)': 'cz-qwerty',
+        'Danish': 'dk',
+        'Dutch': 'nl',
+        'Dvorak': 'us-dvorak',
+        'English (UK)': 'gb',
+        'English (US)': 'us',
+        'Estonian': 'ee',
+        'Finnish': 'fi-kotoistus',
+        'French': 'fr',
+        'French (Canada)': 'ca',
+        'French (Switzerland)': 'ch-fr',
+        'German': 'de-nodeadkeys',
+        'German (Switzerland)': 'ch-de_nodeadkeys',
+        'German (with deadkeys)': 'de',
+        'Greek': 'gr',
+        'Hungarian': 'hu',
+        'Icelandic': 'is',
+        'Italian': 'it',
+        'Japanese': 'jp',
+        'Khmer': 'khmer',
+        'Korean': 'kr',
+        'Lithuanian': 'lt',
+        'Norwegian': 'no',
+        'Polish': 'pl',
+        'Portuguese': 'pt',
+        'Portuguese (Brazil)': 'br',
+        'Portuguese (Brazil  US accents)': 'us-intl',
+        'Romanian': 'ro',
+        'Russian': 'ruwin_alt-UTF-8',
+        'Serbian': 'sr-cy',
+        'Simplified Chinese': 'us',
+        'Slovak': 'sk',
+        'Slovak (qwerty)': 'sk-qwerty',
+        'Slovene': 'si',
+        'Spanish': 'es',
+        'Spanish (Asturian variant)': 'es-ast',
+        'Spanish (CP 850)': 'es',
+        'Spanish (Latin America)': 'latam',
+        'Swedish': 'se',
+        'Tajik': 'tj_alt-UTF8',
+        'Traditional Chinese': 'us',
+        'Turkish': 'tr',
+        'Ukrainian': 'ua-utf',
+        'US International': 'us-intl'
+    }
 
 } %}
 
