[grafana] Set dashboard names depending on project

--- a/grafana-formula/grafana/files/mgr-client-systems.json.jinja
+++ b/grafana-formula/grafana/files/mgr-client-systems.json.jinja
@@ -1,3 +1,4 @@
+{% raw %}
 {
   "__inputs": [
     {
@@ -76,7 +77,9 @@
       }
     ]
   },
-  "description": "Uyuni Client Systems",
+{% endraw %}
+  "description": "{{ product_name }} Client Systems",
+{% raw %}
   "editable": true,
   "fiscalYearStartMonth": 0,
   "gnetId": 704,
@@ -1434,7 +1437,8 @@
     ]
   },
   "timezone": "browser",
-  "title": "Uyuni Client Systems",
+{% endraw %}
+  "title": "{{ product_name }} Client Systems",
   "uid": "KIko76Nik",
   "version": 6,
   "weekStart": ""
