--- a/grafana-formula/grafana/files/mgr-server.json.jinja
+++ b/grafana-formula/grafana/files/mgr-server.json.jinja
@@ -1,3 +1,4 @@
+{% raw %}
 {
   "__inputs": [
     {
@@ -2735,7 +2736,8 @@
     ]
   },
   "timezone": "",
-  "title": "Uyuni Server",
+{% endraw %}
+  "title": "{{ product_name }} Server",
   "uid": "2p2qPSUik",
   "version": 2,
   "weekStart": ""
