--- a/grafana-formula/grafana/files/mgr-server.json.jinja
+++ b/grafana-formula/grafana/files/mgr-server.json.jinja
@@ -686,7 +686,7 @@
           "format": "time_series",
           "instant": true,
           "intervalFactor": 1,
-          "legendFormat": "",
+          "legendFormat": "{{mountpoint}}",
           "refId": "A",
           "step": 7200,
           "datasource": {
