--- a/grafana-formula/grafana/files/mgr-server.json.jinja
+++ b/grafana-formula/grafana/files/mgr-server.json.jinja
@@ -1177,7 +1177,7 @@
           "expr": "label_replace(1 - node_filesystem_avail_bytes{instance=~\"$server:9100\", fstype=~\"vfat|btrfs|xfs|ext\\\\d\"} / node_filesystem_size_bytes, \"shortdev\", \"$1\", \"device\", \"/dev/(.*)\")   ",
           "format": "time_series",
           "intervalFactor": 2,
-          "legendFormat": "{{shortdev}}",
+          "legendFormat": "{{mountpoint}}",
           "refId": "A",
           "step": 2400,
           "datasource": {
