[PostgreSQl] Fix parsing passwords

--- a/prometheus-exporters-formula/prometheus-exporters/map.jinja
+++ b/prometheus-exporters-formula/prometheus-exporters/map.jinja
@@ -8,7 +8,8 @@
         'apache_exporter_service_config': '/etc/sysconfig/prometheus-apache_exporter',
         'postgres_exporter_package': 'prometheus-postgres_exporter',
         'postgres_exporter_service': 'prometheus-postgres_exporter',
-        'postgres_exporter_service_config': '/etc/sysconfig/prometheus-postgres_exporter',
+        'postgres_exporter_service_config': '/etc/systemd/system/prometheus-postgres_exporter.service.d/60-suse-salt-formula.conf',
+        'postgres_exporter_password_file': '/etc/postgres_exporter/pg_passwd',
         'exporter_exporter_package': 'golang-github-QubitProducts-exporter_exporter',
         'exporter_exporter_service': 'prometheus-exporter_exporter',
         'exporter_exporter_service_config': '/etc/sysconfig/prometheus-exporter_exporter',
@@ -22,7 +23,8 @@
         'apache_exporter_service_config': '/etc/default/prometheus-apache-exporter',
         'postgres_exporter_package': 'prometheus-postgres-exporter',
         'postgres_exporter_service': 'prometheus-postgres-exporter',
-        'postgres_exporter_service_config': '/etc/default/prometheus-postgres-exporter',
+        'postgres_exporter_service_config': '/etc/systemd/system/prometheus-postgres_exporter.service.d/60-suse-salt-formula.conf',
+        'postgres_exporter_password_file': '/etc/postgres_exporter/pg_passwd',
         'exporter_exporter_package': 'prometheus-exporter-exporter',
         'exporter_exporter_service': 'prometheus-exporter-exporter',
         'exporter_exporter_service_config': '/etc/systemd/system/prometheus-exporter-exporter.service.d/uyuni.conf',
@@ -36,6 +38,7 @@
         'apache_exporter_service_config': '/etc/sysconfig/prometheus-apache_exporter',
         'postgres_exporter_package': 'prometheus-postgres_exporter',
         'postgres_exporter_service': 'prometheus-postgres_exporter',
-        'postgres_exporter_service_config': '/etc/sysconfig/prometheus-postgres_exporter',
+        'postgres_exporter_service_config': '/etc/systemd/system/prometheus-postgres_exporter.service.d/60-suse-salt-formula.conf',
+        'postgres_exporter_password_file': '/etc/postgres_exporter/pg_passwd',
     },
 }, merge=salt['pillar.get']('exporters:lookup')) %}
