[exporters] Refactor systemd configuration

--- a/prometheus-exporters-formula/prometheus-exporters/map.jinja
+++ b/prometheus-exporters-formula/prometheus-exporters/map.jinja
@@ -5,7 +5,7 @@
         'node_exporter_service_config': '/etc/sysconfig/prometheus-node_exporter',
         'apache_exporter_package': 'golang-github-lusitaniae-apache_exporter',
         'apache_exporter_service': 'prometheus-apache_exporter',
-        'apache_exporter_service_config': '/etc/sysconfig/prometheus-apache_exporter',
+        'apache_exporter_service_config': '/etc/systemd/system/prometheus-apache_exporter.service.d/60-suse-salt-formula.conf',
         'postgres_exporter_package': 'prometheus-postgres_exporter',
         'postgres_exporter_service': 'prometheus-postgres_exporter',
         'postgres_exporter_service_config': '/etc/systemd/system/prometheus-postgres_exporter.service.d/60-suse-salt-formula.conf',
@@ -20,7 +20,7 @@
         'node_exporter_service_config': '/etc/default/prometheus-node-exporter',
         'apache_exporter_package': 'prometheus-apache-exporter',
         'apache_exporter_service': 'prometheus-apache-exporter',
-        'apache_exporter_service_config': '/etc/default/prometheus-apache-exporter',
+        'apache_exporter_service_config': '/etc/systemd/system/prometheus-apache-exporter.service.d/60-suse-salt-formula.conf',
         'postgres_exporter_package': 'prometheus-postgres-exporter',
         'postgres_exporter_service': 'prometheus-postgres-exporter',
         'postgres_exporter_service_config': '/etc/systemd/system/prometheus-postgres-exporter.service.d/60-suse-salt-formula.conf',
@@ -35,7 +35,7 @@
         'node_exporter_service_config': '/etc/sysconfig/prometheus-node_exporter',
         'apache_exporter_package': 'golang-github-lusitaniae-apache_exporter',
         'apache_exporter_service': 'prometheus-apache_exporter',
-        'apache_exporter_service_config': '/etc/sysconfig/prometheus-apache_exporter',
+        'apache_exporter_service_config': '/etc/systemd/system/prometheus-apache_exporter.service.d/60-suse-salt-formula.conf',
         'postgres_exporter_package': 'prometheus-postgres_exporter',
         'postgres_exporter_service': 'prometheus-postgres_exporter',
         'postgres_exporter_service_config': '/etc/systemd/system/prometheus-postgres_exporter.service.d/60-suse-salt-formula.conf',
